--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,17 @@
 :root {
     --global-header-height: 70px;
 
-    --main-std-dark-color: #444;
-	--main-std-light-color: #d2d2d2;
+    --main-std-dark-bg-color: #333;
+	--main-std-light-bg-color: #f2f2f2;
+    --main-std-blue-color: #91d3ff;
 }
 
 #root:has(#wrapper.dark-mode) {
-    background-color: var(--main-std-dark-color);
+    background-color: var(--main-std-dark-bg-color);
 }
 
 #root:has(#wrapper.light-mode) {
-    background-color: var(--main-std-light-color);
+    background-color: var(--main-std-light-bg-color);
 }
 
 #wrapper {
