--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,13 @@ a {
 	text-decoration: none;
 }
 
+button {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+	padding: 0;
+}
+
 input:focus, select:focus, textarea:focus, button:focus {
 	outline: none;
 }
