장소등록 UI  개선

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,14 @@ nav {
     bottom: 30px;
     right: 10vw;
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(5px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
