장소등록 개선

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,14 @@ nav {
         transform: translateY(0);
     }
 }
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(5px);
+    }
+}
