--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
     --global-header-height: 70px;
+    --global-padding: 50px;
 
     --main-std-dark-bg-color: #333;
 	--main-std-light-bg-color: #fff;
@@ -7,7 +8,7 @@
     --main-std-dark-font-color: #333;
     --main-std-light-font-color: #fff;
 
-    --main-std-blue-color: #1585a4;
+    --main-std-blue-color: #0094FF;
 }
 
 #root:has(#wrapper.dark-mode) {
@@ -23,7 +24,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 95vw;
+    width: 100vw;
     height: 100vh;
     overflow: hidden;
     margin: 0 auto;
@@ -35,6 +36,7 @@ header {
     align-items: center;
     width: 100%;
     height: var(--global-header-height);
+    padding: 0 var(--global-padding);
 }
 
 nav {
