글로벌 검색 추가

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ header {
     width: 100%;
     height: var(--global-header-height);
     padding: 0 var(--global-padding);
+    position: relative;
 }
 
 nav {
